# advent-of-code-python

./: .markdownlint.jsonc  .pre-commit-config.yaml  README.md  adventofcode  adventofcode.py  aoc_run.py  pyproject.toml
2021/01/: __init__.py
2021/02/: __init__.py
2021/03/: __init__.py
2021/04/: __init__.py
2021/05/: __init__.py
2021/06/: __init__.py
2021/07/: __init__.py
2021/08/: __init__.py
2022/01/: __init__.py
2022/02/: __init__.py
2022/03/: __init__.py
2022/04/: __init__.py
2022/05/: __init__.py
2022/06/: __init__.py
2022/07/: __init__.py
2022/08/: __init__.py
2022/09/: __init__.py
2022/10/: __init__.py
2024/05/: __init__.py
days/01/: __init__.py
