[tool.poetry]
name = "adventofcode-2021"
version = "0.1.0"
description = ""
authors = ["m9810223 <m9810223@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.8,<4"
cleo = "^0.8.1"
clikit = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
